test/corpus/generic_interface.txt
==================
Generic Interface
==================

GENERIC INTERFACE Something(Elem);

END Something.

---
(Compilation
 (kGeneric)
 (kInterface)
 (Id)
 (";")
 ("(")
 (Id)
 (")")
 (";")
 (kEnd)
 (Id)
 (".")
 )
